Спринт 13. Дорабатываю Функциональность «Отзывы». 1) Добавил юнит-тесты на удаление лайка/дизлайка в ReviewControllerTest. 2) В ReviewRepository в INSERT_QUERY убрал useful и 0. 3) В ReviewRepository объединил ADD_LIKE_QUERY и ADD_DISLIKE_QUERY в ADD_REACTION_QUERY. 4) В ReviewRepository объединил addLike с addDislike в addReaction и removeLike с removeDislike в removeReaction, обновил зависимости в DbReviewStorage. 5) В DbReviewStorage в update заменил оператор на лямба-выражение. 6) В InMemoryReviewStorage использовал .toList() вместо collect().